tests/baselines/reference/genericInstantiationEquivalentToObjectLiteral(strict=true).errors.txt
genericInstantiationEquivalentToObjectLiteral.ts(5,5): error TS2454: Variable 'y' is used before being assigned.
genericInstantiationEquivalentToObjectLiteral.ts(8,18): error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
genericInstantiationEquivalentToObjectLiteral.ts(9,18): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.


==== genericInstantiationEquivalentToObjectLiteral.ts (3 errors) ====
    interface Pair<T1, T2> { first: T1; second: T2; }
    var x: Pair<string, number>
    var y: { first: string; second: number; }
    
    x = y;
        ~
!!! error TS2454: Variable 'y' is used before being assigned.
    y = x;
    
    declare function f<T, U>(x: Pair<T, U>);
                     ~
!!! error TS7010: 'f', which lacks return-type annotation, implicitly has an 'any' return type.
    declare function f2<T, U>(x: { first: T; second: U; });
                     ~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
    
    f(x);
    f(y);
    f2(x);
    f2(y);